[gd_scene load_steps=5 format=3 uid="uid://civven5hg8eew"]

[ext_resource type="Script" uid="uid://2iny4kh56ql2" path="res://scripts/robot.gd" id="1_ykvnc"]
[ext_resource type="Texture2D" uid="uid://c6lhoomxjpnra" path="res://assets/wall/beehives9.png" id="2_i42o3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tipki"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykvnc"]
size = Vector2(23, 40)

[node name="Robot" type="CharacterBody2D"]
collision_mask = 17
script = ExtResource("1_ykvnc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tipki")

[node name="Bot" type="RayCast2D" parent="."]
target_position = Vector2(0, 23)
collision_mask = 16

[node name="Right" type="RayCast2D" parent="."]
target_position = Vector2(44, 0)
collision_mask = 16

[node name="Right2" type="RayCast2D" parent="."]
position = Vector2(0, -25)
target_position = Vector2(44, 0)
collision_mask = 16

[node name="Esq" type="RayCast2D" parent="."]
target_position = Vector2(-44, 0)
collision_mask = 16

[node name="Esq2" type="RayCast2D" parent="."]
position = Vector2(0, -25)
target_position = Vector2(-44, 0)
collision_mask = 16

[node name="Left" type="RayCast2D" parent="."]
position = Vector2(0, -15)
target_position = Vector2(-20, 0)
collision_mask = 16

[node name="Left2" type="RayCast2D" parent="."]
target_position = Vector2(-23, 32)
collision_mask = 16

[node name="Left3" type="RayCast2D" parent="."]
target_position = Vector2(-23, 0)
collision_mask = 16

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4

[node name="CameraOffset" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 184)

[node name="Beehives9" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i42o3")

[node name="LeftArea" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(-11.5, 7)
shape = SubResource("RectangleShape2D_ykvnc")
